fix layout bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,11 +7,6 @@ body{
     display: none;
 }
 
-.clickArea {
-    width: 100%;
-    height: 100%;
-}
-
 h1 {
     margin-bottom: 30px;
 }
@@ -20,6 +15,7 @@ h1 {
     background: rgb(235, 207, 115);
     max-width: 800px;
     border-radius: 10px;
+    min-width: 350px;
 }
 
 .display {
@@ -28,6 +24,7 @@ h1 {
     text-align: right;
     margin: 0 10px 30px 10px;
     overflow: hidden;
+    border-radius: 10px;
 }
 
 button {
